--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.17",
+    "@mui/material": "^5.16.6",
+    "@mui/x-date-pickers": "^7.12.1",
     "@tanstack/react-query": "^5.37.1",
     "@types/react-window": "^1.8.8",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.2.6",
     "localforage": "^1.10.0",
     "lorem-ipsum": "^2.0.8",
@@ -25,6 +31,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-virtualized-auto-sizer": "^1.0.24",
+    "react-virtuoso": "^4.9.0",
     "react-window": "^1.8.10",
     "sort-by": "^0.0.2"
   },
