--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-virtuoso": "^4.9.0",
     "react-window": "^1.8.10",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
