--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "localforage": "^1.10.0",
     "lorem-ipsum": "^2.0.8",
     "match-sorter": "^6.3.4",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
