--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.37.1",
     "@types/react-window": "^1.8.8",
     "axios": "^1.7.2",
+    "chance": "^1.1.12",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.2.6",
     "localforage": "^1.10.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chance": "^1.1.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
