--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.22.3",
     "@mui/x-date-pickers": "^7.12.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.6",
     "@tanstack/react-query": "^5.37.1",
     "@types/react-window": "^1.8.8",
     "axios": "^1.7.2",
