--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-pdf/renderer": "^4.1.6",
     "@tanstack/react-query": "^5.37.1",
     "@types/react-window": "^1.8.8",
+    "@welldone-software/why-did-you-render": "^4.3.2",
     "axios": "^1.7.2",
     "chance": "^1.1.12",
     "dayjs": "^1.11.12",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/chance": "^1.1.6",
+    "@types/node": "^22.12.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
